Deluge 1.1.0 - "" (In Development)
 Core:
  * Implement #79 ability to change outgoing port range
  * Implement #296 ability to change peer TOS byte
  * Add per-torrent move on completed settings
  * Implement #414 use async save_resume_data method
  * FilterManager with torrent filtering in get_torrents_status , for sidebar and plugins.
  * Implement #368 add torrents by infohash/magnet uri (trackerless torrents)

 GtkUI:
  * Add peer progress to the peers tab
  * Sorting # column will place downloaders above seeds
  * Remove dependency on libtorrent for add torrent dialog
  * Allow adding multiple trackers at once in the edit tracker dialog
  * Implement #28 Create Torrent Dialog
  * Redesiged sidebar with filters for Active and Tracker (see FilterManager)

 WebUi
  * All details tabs have the same features as gtk-ui.
  * Persistent sessions #486
  * Plugin improvements for easy use of templates and images in eggs. #497