@@ -16,6 +16,16 @@ Deluge 1.1.0 - "" (In Development)
   * Redesiged sidebar with filters for Active and Tracker (see FilterManager)
 
  WebUi
-  * All details tabs have the same features as gtk-ui.
+  * All details tabs have the same features as in gtk-ui.
   * Persistent sessions #486
   * Plugin improvements for easy use of templates and images in eggs. #497
+  * Classic template takes over some style elements from white template.
+
+Plugins
+ * Stats plugin for graphs.
+ * Label plugin for grouping torrents and per torrent settings.
+
+
+
+
+
